<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.events.EventsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upper_horizontal_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_32sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_horizontal_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_32sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/events_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_cornerd_background"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_16sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="@id/upper_horizontal_guideline">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11sdp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center"
                android:text="@string/there_are_no_events_yet"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.ihsanstask.utils.customViews.EmptyStateRecyclerView
            android:id="@+id/events_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/back"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="@id/upper_horizontal_guideline"
            tools:listitem="@layout/event_cell" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light_gray"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_guideline"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light_gray"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
