<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.date.DateFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upper_horizontal_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_32sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_horizontal_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_32sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            tools:text="En"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toTopOf="@id/upper_horizontal_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/data_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/tajawal_medium"
            android:text='@{@string/date + ":"}'
            android:textColor="@color/gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="@id/upper_horizontal_guideline"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:fontFamily="@font/tajawal_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/data_label"
            app:layout_constraintStart_toEndOf="@id/data_label"
            app:layout_constraintTop_toTopOf="@id/data_label"
            tools:text="@tools:sample/full_names" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pick_date_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light_gray"
            android:text="@string/pick_date"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/data_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/assign_event"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light_gray"
            android:text="@string/assign_event"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@+id/pick_date_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_events"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/light_gray"
            android:text="@string/show_events"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_guideline"
            app:layout_constraintStart_toStartOf="@id/start_vertical_guideline" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
